--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "UNLICENSED",
   "main": "dist/index.js",
   "repository": {
-    "type" : "git",
+    "type": "git",
     "url": "https://github.com/StartOutDev/startout-ui.git"
   },
   "dependencies": {},
@@ -16,9 +16,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
     "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/preset-typescript": "^3.0.0",
@@ -28,6 +30,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
+    "eslint": "^7.4.0",
+    "eslint-config-seek": "^7.0.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "prettier": "2.0.5",
     "react": "^16.8.4",
     "react-docgen-typescript-loader": "^3.7.2",
@@ -35,14 +41,33 @@
     "react-scripts": "^3.4.1",
     "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
+    "semantic-release": "^17.1.1",
     "styled-components": "^4.1.3",
     "ts-loader": "^7.0.5",
     "typescript": "^3.7.2",
     "webpack": "^4.43.0"
   },
   "scripts": {
+    "build-storybook": "build-storybook",
     "build": "rimraf dist && tsc",
+    "lint": "eslint src",
+    "semantic-release": "",
     "storybook": "start-storybook -p 9009 -s ./assets",
-    "build-storybook": "build-storybook"
+    "test": "echo NYI"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.tsx?": "eslint"
+  },
+  "eslintConfig": {
+    "extends": "seek"
+  },
+  "commitlint": {
+    "extends": "@commitlint/config-conventional"
   }
 }
