--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     }
   },
   "lint-staged": {
-    "*.tsx?": "eslint"
+    "**/*.ts?(x)": "eslint"
   },
   "eslintConfig": {
     "extends": "seek"
