--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "startout-ui",
-  "version": "0.1.0",
+  "name": "@startout/ui",
+  "version": "0.0.0-semantically-released",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
