chore: 🤖 update semantic release step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - checkout
       - run: yarn --frozen-lockfile
       - run: yarn build
-      - run: yarn semantic-release
+      - run: yarn run semantic-release
 
 workflows:
   version: 2
