--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "type": "git",
     "url": "https://github.com/StartOutDev/startout-ui.git"
   },
+  "typings": "dist/index.d.ts",
+  "sideEffects": "true",
   "dependencies": {},
   "peerDependencies": {
     "react": "^16.13.1",
