--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.19",
+    "@storybook/storybook-deployer": "^2.8.6",
     "@types/react": "16.9.41",
     "@types/styled-components": "^5.1.0",
     "babel-core": "^6.26.3",
