--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@startout/ui",
+  "name": "startout-ui",
   "version": "0.0.0-semantically-released",
   "license": "MIT",
   "main": "dist/index.js",
