--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.0.0",
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
+    "@storybook/addon-a11y": "^6.0.21",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
@@ -38,12 +39,14 @@
     "lint-staged": "^10.2.11",
     "prettier": "2.0.5",
     "react": "^16.8.4",
+    "react-a11y": "^1.1.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.8.4",
     "react-scripts": "^3.4.1",
     "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.1",
+    "storybook": "^6.0.21",
     "styled-components": "^4.1.3",
     "ts-loader": "^7.0.5",
     "typescript": "^3.7.2",
