--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "typings": "dist/index.d.ts",
   "sideEffects": "true",
-  "dependencies": {},
+  "dependencies": {
+    "package.json": "^2.0.1",
+    "startout-ui": "^1.0.1"
+  },
   "peerDependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,7 +38,7 @@
     "core-js": "^3.6.5",
     "eslint": "^7.4.0",
     "eslint-config-seek": "^7.0.2",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "lint-staged": "^10.2.11",
     "prettier": "2.0.5",
     "react": "^16.8.4",
@@ -49,7 +52,7 @@
     "storybook": "^6.0.21",
     "styled-components": "^4.1.3",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.7.2",
+    "typescript": "^4.0.3",
     "webpack": "^4.43.0"
   },
   "scripts": {
@@ -65,7 +68,8 @@
     }
   },
   "lint-staged": {
-    "**/*.ts?(x)": "eslint"
+    "**/*.ts?(x)": "eslint",
+    "eslint --fix": "git add"
   },
   "eslintConfig": {
     "extends": "seek"
